--- a/action.yml
+++ b/action.yml
@@ -21,10 +21,10 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: GEt repo name
+    - name: Get repo name for URL
       shell: bash
       run: |
-        echo "echo ::set-env gh_repo=GHA_BRANCH::${GITHUB_REPOSITORY#*/}"
+        echo "GH_REPO=${GITHUB_REPOSITORY#*/}" >> "$GITHUB_ENV"
         
     - name: Run Allure action
       uses: simple-elf/allure-report-action@v1.6
